--- a/index.html
+++ b/index.html
@@ -28,6 +28,16 @@
   <button id="btn">compute</button>
 
   <p id="result"></p>
+  <p>
+    Insert the information in the form and the calculator will determine the debt to equity ratio<br> 
+    What is the debt to equity ratio calculator?<br>
+    The debt to equity calculator is a tool that measures the debt to equity ratio.<br>
+    How to calculate debt to equity ratio?<br>
+    To calculate debt to equity ratio you should use the following formula:<br>
+    debt to equity ratio = total liabilities / stockholders equity<br>
+    Why use debt to equity ratio calculator?<br>
+    The debt to equity calculator is used in order to compute the debt to equity ratio.<br>
+</p>
   <script src="app.js"></script>
 </body>
 </html>
